test_wraps_with_cleaned_sig
+ Add funcsigs to Pipenv

--- a/lib/Pipfile.locks/python-3.6.6
+++ b/lib/Pipfile.locks/python-3.6.6
@@ -1,7 +1,7 @@
 {
     "_meta": {
         "hash": {
-            "sha256": "30b9b8e40a3ec3954f46ee967f18fdd51e41640bca455c415a061dfdd2d6d8b0"
+            "sha256": "7ca4386ed097bcc2b2effb8e534e8684fcdb41183f67136720919fab81feec36"
         },
         "pipfile-spec": 6,
         "requires": {},
@@ -41,19 +41,19 @@
         },
         "boto3": {
             "hashes": [
-                "sha256:25bf66529b94fc9b89928fd5fd004d4a15c7e9603b44692e9652b8fc526699c3",
-                "sha256:60b6f8ce0f2213b070ad67851466b7e8467061efe9536df467f61402c2110a9f"
+                "sha256:f9361071b1c04760fe2bc187854018a6175105409fe8f51722ca8357c88206fc",
+                "sha256:fcc151dda0e278a1baa1e180b661c6ab2b2d14be29e68fdc88c78402975b7733"
             ],
             "index": "pypi",
-            "version": "==1.9.119"
+            "version": "==1.9.121"
         },
         "botocore": {
             "hashes": [
-                "sha256:22e8c1a52aea4511a276926400bc2a2209c6cd96e75d144696c5e5b405775914",
-                "sha256:92e8cf18e220aadef3db0ef724537a8b3414f2836d99a972e09b9c9bd4001295"
+                "sha256:57b98300ed264d1e5abdc22621a36d952488c7b0a1ecad82a3d58e84d2128a8f",
+                "sha256:f0eeeb89bbe0464da9499c2705c2fe6ac57ae0276b73b38ffb8638b217887139"
             ],
             "index": "pypi",
-            "version": "==1.12.119"
+            "version": "==1.12.121"
         },
         "click": {
             "hashes": [
@@ -452,6 +452,15 @@
             "index": "pypi",
             "version": "==3.7.7"
         },
+        "funcsigs": {
+            "hashes": [
+                "sha256:330cc27ccbf7f1e992e69fef78261dc7c6569012cf397db8d3de0234e6c937ca",
+                "sha256:a7bb0f2cf3a3fd1ab2732cb49eba4252c2af4240442415b4abce3b87022a8f50"
+            ],
+            "index": "pypi",
+            "markers": "python_version < '3.0'",
+            "version": "==1.0.2"
+        },
         "future": {
             "hashes": [
                 "sha256:67045236dcfd6816dc439556d009594abf643e5eb48992e36beac09c2ca659b8"
@@ -775,11 +784,11 @@
         },
         "testfixtures": {
             "hashes": [
-                "sha256:1ff15abd7c93a25c25e707e15bc245fb3d5723e43ce114e8fd6f72cff17926c8",
-                "sha256:30cceb538d15f17b8bf253b7f0350d5a19dd50dc55fb10902c3fc7e90d7d58ff"
+                "sha256:79b1c1ae5407750406eaf4407ea0d4c0d50b60bec3f85494c6401e072e7d2239",
+                "sha256:fc52e99561141e2e10fd79f3a565502238adcb90f6e2a7634abceef2d2c17bf7"
             ],
             "index": "pypi",
-            "version": "==6.6.1"
+            "version": "==6.6.2"
         },
         "toolz": {
             "hashes": [
